--- a/project1 - jquery - button/assets/styles.css
+++ b/project1 - jquery - button/assets/styles.css
@@ -54,10 +54,17 @@ body {
 #button {
     width:66px;
     height:66px;
+    z-index:30;
     border-radius: 50%;
     background-color: #fde8e5;
 }
 
+.analysis {
+    position: absolute;
+    z-index:20;
+    top: 43px;
+    left: 148px;
+}
 
 .container-letters {
     overflow-x: scroll;
@@ -98,7 +105,7 @@ body {
 
 .sources {
     height: 195px;
-    width: 550px;
+    width: 500px;
     margin-top: 220px;
     margin-bottom: 30px;
     float: center;
