--- a/project1/assets/styles.css
+++ b/project1/assets/styles.css
@@ -111,6 +111,16 @@ body {
     float: center;
     text-align: left;
 }
+
+ a {
+            color: darkgrey;
+            text-decoration: none;
+        }
+        
+  a:visited {
+            color: floralwhite;
+        }
+
     
     /*Fonts*/
 
