--- a/project1 - jquery - button/assets/styles.css
+++ b/project1 - jquery - button/assets/styles.css
@@ -113,12 +113,12 @@ body {
 }
 
 a {
-    color: #acc1e0;
+    color: #87b0ed;
     text-decoration: none;
         }
         
 a:visited {
-    color: #acb1e0;
+    color: #959cd8;
         }
 
     
