--- a/project1 - jquery - button/assets/styles.css
+++ b/project1 - jquery - button/assets/styles.css
@@ -115,12 +115,12 @@ body {
 }
 
 a {
-    color: #87b0ed;
+    color: #929ae8;
     text-decoration: none;
         }
         
 a:visited {
-    color: #515bbc;
+    color: #fde8e5;
         }
 
     
