--- a/project1 - jquery - button/assets/styles.css
+++ b/project1 - jquery - button/assets/styles.css
@@ -87,7 +87,7 @@ body {
 .photo-info {
     height: 185px;
     width: 185px;
-    color: solid #fde8e5;
+    color: #fde8e5;
     align-content: center;
     margin-top: 50 px;
     margin-left: 0px;
