--- a/Project2/assets/styles.css
+++ b/Project2/assets/styles.css
@@ -11,7 +11,7 @@ body {
 
 .container {
     width: 768px;
-    height: 1110px; 
+    height: 1175px; 
     margin: auto;
     background-color:white;
     
@@ -19,11 +19,20 @@ body {
 
 h1 {
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-family: 'Poppins', sans-serif;
     margin-top: -30px;
     font-size: 90px;
 }
+
+h4 {
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: 100;
+    margin-bottom: 25px;
+}
+
 
 h3 {
     text-align: center;
