--- a/Project2/SlickQuiz-master/css/master.css
+++ b/Project2/SlickQuiz-master/css/master.css
@@ -72,6 +72,10 @@ ol li { list-style-type: decimal; margin-left: 20px; }
     margin-top: 40px;
 }
 
+.home {
+    margin-top: 40px;
+}
+
 .tryAgain {
     float: none;
     margin: 20px 0;
