--- a/Responsive-Web-Design/css/styles.css
+++ b/Responsive-Web-Design/css/styles.css
@@ -242,7 +242,7 @@ footer dd {
     border-bottom: .9rem double #32292F;
 }
     footer .footer-info {
-    color: #32292F;
+    color: darkgrey;
     }
         
         
