--- a/Project3/typing/assets/styles.css
+++ b/Project3/typing/assets/styles.css
@@ -15,7 +15,7 @@ h1 {
     font-family: gill-sans-nova, sans-serif;
     font-weight: 200;
     font-style: normal;
-    color: aliceblue;
+    color: white;
     font-size: 70px;
     text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
 }
