--- a/Project3/assets/styles.css
+++ b/Project3/assets/styles.css
@@ -13,7 +13,7 @@ nav {
 
 .nav-bar {
     overflow: hidden;
-    background-color: #000;
+    background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
@@ -29,7 +29,7 @@ nav {
 .topnav a {
     float: left;
     display: block;
-    color: #fff;
+    color: black;
     text-align: center;
     padding: .875rem 1rem;
     text-decoration: none;
@@ -40,14 +40,14 @@ nav {
 }
 
 .topnav a.icon {
-    color: #fff;
+    color: lightpink;
     float: right;
     display: block;
     font-size: 1.25rem;
 }
 
 .topnav a:hover {
-    background-color: #1d90fc;
+    background-color: lightpink;
     color: #fff;
 }
 
@@ -89,19 +89,13 @@ header {
     position: relative;
 }
 
-.site-header {
-    background-color: lightpink;
-    width: 100%;
-    z-index: 5;
-}
-
 
 ****************
 ***/* Page */***
 ****************
 
 .page {
-    width: 90%;
+    width: 100%;
 }
 
 main {
@@ -123,9 +117,10 @@ main {
     margin-bottom: 1.25rem;
     margin-top: 5rem;
     font-family: 'Pacifico', cursive;
-    font-weight: 900;
+    font-weight: 600;
     font-style: normal;
     color: lightpink;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
 }
 
 .intro p {
@@ -135,28 +130,15 @@ main {
     font-style: normal;
 }
 
-.intro h3 {
-    font-size: 1.25rem;
-    font-family: gill-sans-nova, sans-serif;
-    font-weight: 200;
-    font-style: normal;
-    color: skyblue;
-    margin-top: 3.125rem;
-    border-bottom: 1px solid #000;
-    padding-bottom: 0.3125rem;
-    width: 10rem;
-}
-
 .projects {
     z-index: 0;
 }
 
 .project1 {
- width: 100%;
+    width: 100%;
 /*    height: 21.875rem;*/
     position: relative;
     overflow: hidden;
-    margin: 3.125rem 0;
 }
 
 .project1 img {
@@ -175,7 +157,7 @@ main {
     font-family: gill-sans-nova, sans-serif;
     font-weight: 200;
     font-style: normal;
-    background-color: #000;
+    background-color: black;
 }
 
 .project2 {
@@ -262,8 +244,6 @@ main {
 }
 
 
-
-
 @media only screen and (min-width: 601px) {
 
     .main-nav {
@@ -303,7 +283,7 @@ main {
     }
 
     .main-nav a {
-        font-size: .95rem;
+        font-size: 1.50rem;
     }
     
     .intro {
@@ -312,7 +292,8 @@ main {
     }
     
     .intro h1 {
-        font-size: 4.6875rem;
+        font-size: 4rem;
+        margin-left: .8rem;
     }
 
     .intro p {
@@ -322,14 +303,14 @@ main {
     .projects {
         width: 100%;
         display: grid;
+        justify-content: space-around;
 
     }
     
-    
     .project1 {
-        width: 24rem;
-        height: 24rem;
-        margin-top: 0;
+        width: 29rem;
+        height: 23rem;
+        margin-bottom: .9rem;
         grid-column-start: 1;    
     }
     
@@ -352,13 +333,12 @@ main {
     .project1_info h4 {
         font-size: 3.125rem;
         background-color: transparent;
-        padding: 1.25rem;
     }
     
     
     .project2 {
-        width: 24rem;
-        height: 24rem;
+        width: 29rem;
+        height: 23rem;
         overflow: hidden;
         grid-column-start: 2;
         margin: 0;
@@ -386,7 +366,6 @@ main {
     .project2_info h4 {
         font-size: 3.125rem;
         background-color: transparent;
-        padding: 1.25rem;
     }
     
     .link3 {
@@ -394,9 +373,9 @@ main {
     }
     
     .project3 {
-        width: 24rem;
-        height: 24rem;
-        margin: 0;
+        width: 29rem;
+        height: 23rem;
+        margin-top: 0;
     }
     
     .project3 img {
@@ -418,7 +397,6 @@ main {
     .project3_info h4 {
         font-size: 3.125rem;
         background-color: transparent;
-        padding: 1.25rem;
     }
     
     .link4 {
@@ -426,9 +404,9 @@ main {
     }
     
     .project4 {
-        width: 24rem;
-        height: 24rem;
-        margin: 0 0 1.5rem 0;
+        width: 29rem;
+        height: 23rem;
+        margin: 0;
     }
     
     .project4 img {
@@ -450,7 +428,6 @@ main {
     .project4_info h4 {
         font-size: 3.125rem;
         background-color: transparent;
-        padding: 1.25rem;
     }
 
 }
