--- a/Project3/assets/aboutme-style.css
+++ b/Project3/assets/aboutme-style.css
@@ -187,21 +187,21 @@ p {
     text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
 }
 
-
 .about-me {
-    width: 50%;
     position:relative;
     overflow: hidden;
     z-index: 0;
 }
 
 
-
 .description {
     width: 100%;
     margin: 0;
     padding: 0;
-}
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    }
 
 #back {
     background-color: lightpink;
@@ -209,6 +209,12 @@ p {
     width: 5rem;
     height:3rem;   
 }
+
+.img {
+    padding: .5rem .5rem .5rem .5rem;
+
+}
+
 
 @media only screen and (min-width: 601px) {
 
@@ -243,6 +249,12 @@ p {
         flex-wrap: wrap;
 
     }
+    
+    .description {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
 
   .img {
         padding: 0 0 1.5rem 0;
@@ -252,7 +264,11 @@ p {
         text-align: left;
         margin-left: 2rem;
         margin-right: 2rem;
-    }   
+    } 
+    
+     .my-photo img {
+        width:100%;
+    }
     
 }
 
