--- a/Project3/assets/projects-style.css
+++ b/Project3/assets/projects-style.css
@@ -64,6 +64,16 @@ p {
     margin-top: .5rem;
 }
 
+.course {
+    font-weight: 600;
+     font-family: gill-sans-nova, sans-serif;
+    font-size: 1.25rem;
+}
+
+.title h1 span {
+	font-weight: 800;
+}
+
 /******************* Nav Bar
 *****************************/
 
@@ -158,7 +168,7 @@ nav {
 
 }
 
-.image-1 {
+.big-image {
     padding: .5rem .5rem .5rem .5rem;
 
 }
@@ -167,14 +177,14 @@ nav {
 /******************* Individual Page STYLING
 *****************************/
 
-.group-description {
+.overall-description {
     width: 100%;
     display: flex;
     flex-direction: row;
 }
 
 
-.details {
+.course {
     width: 100%;
     margin-right: 1rem;
 }
@@ -185,7 +195,7 @@ nav {
     padding: 0;
 }
 
-.process {
+.two-photos {
     padding: .5rem;
     display: flex;
     flex-direction: row;
@@ -195,17 +205,33 @@ nav {
     margin-right: 1rem;
 }
 
-#back {
-    background-color: lightpink;
+.button {
+    background-color: lightblue;
     margin:auto;
-    width: 5rem;
-    height:3rem;   
+    width: 7em;
+    height:2.5rem;   
+    float: right;
+    width: auto;
+    padding: 7px;
+    color:#ffffff;
+    font-family: gill-sans-nova, sans-serif;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    margin-bottom: 5em;
+    text-align: inherit;
+    margin-top: 3em;
 }
+
+.button:hover {
+    background-color:lightsteelblue;
+}
+
 
 
 @media screen and (max-width: 600px) {
 
-    .group-description {
+    .overall-description {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -232,7 +258,7 @@ nav {
         margin-right: 2rem;
     }
 
-    .process {
+    .two-photos {
         flex-direction: column;
     }
     
@@ -245,7 +271,7 @@ nav {
 
 
 @media screen and (max-width: 650px) {
-    .topnav a:not(:first-child) {
+    .topnav a: {
         display: none;
     }
 
@@ -266,7 +292,7 @@ nav {
         display: none;
     }
 
-    .group-description {
+    .overall-description {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -280,7 +306,7 @@ nav {
         border: 0;
     }
 
-    .process {
+    .two-photos {
         flex-direction: column;
     }
     
@@ -288,9 +314,7 @@ nav {
         margin-right:0;
         margin-bottom:1.2rem;
     }
-}
 
-@media screen and (max-width: 650px) {
     .topnav.responsive {
         position: relative;
     }
