--- a/Project3/typing/assets/styles.css
+++ b/Project3/typing/assets/styles.css
@@ -1,12 +1,12 @@
 body {
     margin: 0;
     padding:0;
-    background: 9ececb;
+    background: lightblue;
 }
 
 h1 {
     position: absolute;
-    top: 50%;
+    top: 40%;
     transform: translateY(-50);
     width: 100%;
     text-align: center;
