--- a/Project3/assets/aboutme-style.css
+++ b/Project3/assets/aboutme-style.css
@@ -184,7 +184,7 @@ nav {
 
 .nav-bar {
     overflow: hidden;
-    background-color: lightblue;
+    background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
@@ -306,7 +306,7 @@ nav {
 
 
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 601px) {
 
     .about-me {
         display: flex;
@@ -328,39 +328,26 @@ nav {
         margin: 0;
     }
 
-    .title {
-        text-align: left;
-        margin-left: 2rem;
-        margin-right: 2rem;
-    }
-
-
-}
-
-
-@media screen and (max-width: 650px) {
-    .topnav a: {
-        display: none;
+    .main-nav {
+        display: flex;
+        margin-right: 30px;
+        flex-direction: row;
+        justify-content: flex-end;
     }
 
     .topnav a.icon {
-        float: right;
-        display: block;
-        margin-top: .85rem;
-        font-size: 1.8rem;
-    }
-
-    .title {
-        text-align: center;
-        margin-left: 2rem;
-        margin-right: 2rem;
-    }
-
-    .topnav .icon {
         display: none;
     }
 
-    .overall-description {
+    .topnav.responsive .icon {
+        display: none;
+    }
+
+    .main-nav a {
+        display: flex;
+    }
+    
+     .overall-description {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -373,22 +360,13 @@ nav {
         padding: 0;
         border: 0;
     }
-
-    .topnav.responsive {
-        position: relative;
+    
+     .title {
+        text-align: center;
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
 
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
 
 }
 
@@ -417,6 +395,18 @@ nav {
 
     }
     
+    .intro h1 {
+        font-size: 4.6875rem;
+    }
+
+        
+    .page {
+        /* 960px */
+        width: 60rem;
+        margin: 0 auto;
+    }
+
+
     .name h1 {
         font-size: 4.6875rem;
     }
