--- a/Project3/assets/projects-style.css
+++ b/Project3/assets/projects-style.css
@@ -91,7 +91,7 @@ nav {
 
 .nav-bar {
     overflow: hidden;
-    background-color: lightblue;
+    background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
@@ -118,14 +118,14 @@ nav {
 }
 
 .topnav a.icon {
-    color: white;
+    color: black;
     float: right;
     display: block;
     font-size: 1.25rem;
 }
 
 .topnav a:hover {
-    background-color: lightsteelblue;
+    background-color: lightslategray;
     color: #fff;
 }
 
@@ -142,7 +142,6 @@ nav {
 
 .main-nav a {
     display: none;
-    font-size: 1.50rem;
 }
 
 .main-nav {
@@ -159,8 +158,13 @@ nav {
     display: block;
 }
 
-/******************* Nav Bar
+
+/******************* Individual Page STYLING
 *****************************/
+
+header {
+    position: relative;
+}
 
 .title {
     text-align: center;
@@ -172,10 +176,6 @@ nav {
     padding: .5rem .5rem .5rem .5rem;
 
 }
-
-
-/******************* Individual Page STYLING
-*****************************/
 
 .overall-description {
     width: 100%;
@@ -206,7 +206,7 @@ nav {
 }
 
 .button {
-    background-color: lightblue;
+    background-color: slategrey;
     margin:auto;
     width: 7em;
     height:2.5rem;   
@@ -320,7 +320,7 @@ nav {
     }
 
     .topnav.responsive a.icon {
-        position: absolute;
+        position: fixed;
         right: 0;
         top: 0;
     }
@@ -328,7 +328,7 @@ nav {
     .topnav.responsive a {
         float: none;
         display: block;
-        text-align: left;
+        text-align: center;
     }
 
 }
