--- a/Project3/assets/resume-style.css
+++ b/Project3/assets/resume-style.css
@@ -55,7 +55,7 @@ main {
     font-style: normal;
     color: lightblue;
     text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
-    text-align: center;
+    text-align: right;
 }
 
 
