--- a/Project3/assets/aboutme-style.css
+++ b/Project3/assets/aboutme-style.css
@@ -205,7 +205,7 @@ nav {
 }
 
 .button {
-    background-color: lightblue;
+    background-color: slategrey;
     margin:auto;
     width: 7em;
     height:2.5rem;   
