--- a/Project3/assets/projects-style.css
+++ b/Project3/assets/projects-style.css
@@ -8,7 +8,7 @@ body {
 
 }
 
-a:link {
+/*a:link {
     text-decoration: none;
     color:black;
 } 
@@ -16,7 +16,7 @@ a:link {
 a:active {
     text-decoration: none;
     color:lightblue;
-}
+}*/
 
 .page {
     position: relative;
@@ -226,8 +226,6 @@ header {
 .button:hover {
     background-color:lightsteelblue;
 }
-
-
 
 @media screen and (max-width: 600px) {
 
